--- a/h2.md
+++ b/h2.md
@@ -24,7 +24,7 @@ Asensin vagrantin sen viralliselta [lataussivulta](https://developer.hashicorp.c
 
 ## b) 
 
-SSH -yhteydellä asensin koneelle saltin seuraavilla komennoilla: 
+SSH -yhteyden yli asensin koneelle saltin seuraavilla komennoilla: 
 ```bash
 sudo mkdir /etc/apt/keyrings
 sudo curl -fsSL -o /etc/apt/keyrings/salt-archive-keyring-2023.gpg https://repo.saltproject.io/salt/py3/debian/11/amd64/SALT-PROJECT-GPG-PUBKEY-2023.gpg
