--- a/h2.md
+++ b/h2.md
@@ -55,7 +55,7 @@ Vagrant.configure("2") do |config|
 end
 ```
 Nyt vagrant konf.tiedosto mahdollistaa kahden koneen luomisen. Koneille on kummallekkin määritelty oma IP-osoite yksityisessä verkossa.
-Testasin `vagrant status` -komennolla, että molemmat koneet olivat päällä. 
+Testasin `vagrant status` -komennolla, että molemmat koneet olivat päällä. Konfiguraatiotiedostossa on myös määriteltynä koneille muistin ja ytimien määrä.
 
 ![kuva](images/h2/5.png)
 
