--- a/h5.md
+++ b/h5.md
@@ -14,14 +14,10 @@ Ajoin komennon `find /etc/ /home/jasmin -type f -printf '%T+ %p\n' | sort`.
 `-type f` Rajaa haun tiedostoihin.
 
 `-printf '%T+ %p\n'` Määrittelee, miten tiedostojen tiedot tulostetaan.
-
 - `%T+` Tulostaa tiedoston muokkausajan tietyssä aikaleiman formaatissa.
-- 
 - `%p` Tulostaa tiedoston polun.
-- 
 - `\n` Lisää rivinvaihdon jokaisen tiedoston tiedon jälkeen.
-- 
- `| sort` Putki ohjaa edellisen komennon seuraavalle, eli sortille, joka lajittelee numerot nousevassa järjestyksessä
+- `| sort` Putki ohjaa edellisen komennon seuraavalle, eli sortille, joka lajittelee numerot nousevassa järjestyksessä
 
 ![kuva](images/h5/1.png)
 
