--- a/h5.md
+++ b/h5.md
@@ -74,7 +74,7 @@ komento:
 
 `mode: 755`: Määrittää tiedoston oikeudet (chmod) numeroina. `755` antaa luku- ja suoritusoikeudet omistajalle, ja luku- ja suoritusoikeudet ryhmälle
 
-Ajoin komennon `sudo salt '*' state.apply komento` ja Otin SSH-yhteyden minion-koneelle ja ajoin komennon `komento`. Tuloksena terminaalissa näkyi "tervehdys" ja nykyinen päivämäärä.
+Ajoin komennon `sudo salt '*' state.apply komento` ja Otin SSH-yhteyden minion-koneelle ja ajoin komennon `huomenta`. Tuloksena terminaalissa näkyi "tervehdys" ja nykyinen päivämäärä.
 
 ![kuva](images/h5/6.png)
 
